welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot: error: not found: value growFlowers
	    growFlowers();
            ^FlowerPot:6: error: not found: value setCouleur
	setCouleur(Color.YELLOW);
        ^FlowerPot:8: error: not found: value setCouleur
	setCouleur(c);
        ^