welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
def marquer() {
	baisseBrosse();
	leveBrosse();
}
def Flower(c:Color) {
	setCouleur(Color.YELLOW);
	marquer();
	setCouleur(c);
	avance();
	marquer();
	recule();
	recule();
	marquer();
	avance();
	gauche();
	avance();
	marquer();
	recule();
	recule();
	marquer();
	avance();
	droite();
}
def Dessin() {
	avance();
	Flower(Color.RED);
	avance();
	avance();
	avance();
	avance();
	Flower(Color.CYAN);
	droite();
	avance();
	avance();
	droite();
	avance();
	avance();
	Flower(Color.ORANGE);
	recule();
	recule();
	droite();
	recule();
	recule();
	Flower(Color.GREEN);
	droite();
	recule();
	recule();
	recule();
	recule();
	Flower(Color.PINK);
	recule();
}
Dessin();